Implement switch map operator

--- a/switch-map/index.html
+++ b/switch-map/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <button>Please click me</button>
-  <output></output>
+  <output>0</output>
   <script src="index.js"></script>
 </body>
 </html>
