Refactoring take example

--- a/take/index.html
+++ b/take/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>RxJS take operator</h1>
-  <output></output>
+  <output>0</output>
   <script src="index.js"></script>
 </body>
 </html>
