Update index.html on filter example

--- a/filter/index.html
+++ b/filter/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RxJS filter</title>
+  <title>RxJS filter operator</title>
 </head>
 <body>
-  <h1>RxJS filter</h1>
+  <h1>RxJS filter operator</h1>
   <output></output>
   <script src="index.js"></script>
 </body>
