--- a/replay-subject/index.html
+++ b/replay-subject/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>RxJS creating an observable</title>
+  <title>RxJS ReplySubject example</title>
 </head>
 <body>
   <output></output>
